# sharely

./: .dockerignore  .env.example  .gitignore  DOCUMENTATION.md  Dockerfile  README.md  app.js  docker-compose.yml  package-lock.json  package.json  playwright.config.js  server-entry.js
.github/workflows/: auto-merge-claude.yml  build.yml  e2e.yml  electron-build.yml
client/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
client/src/: App.jsx  index.css
docs/: en.md  es.md  fr.md  it.md  ja.md  pt.md  zh.md
e2e/: admin.spec.js  bulk-actions-fixes.spec.js  gallery.spec.js  global-setup.js  helpers.js  sharelink.spec.js  tags.spec.js  upload.spec.js
electron/: main.js  package.json  preload.js
electron/renderer/: app.js  index.html  style.css
electron/scripts/: generate-icon.js
public/css/: style.css
public/js/: main.js
scripts/: build-sidecar.js  generate-missing-thumbnails.js  migrate-uploads-to-user-folders.js  mongo-init.js  setup-db.js
src/: ws.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: sharely-server-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/config/: db.js
src/jobs/: retentionCleanup.js
src/middleware/: auth.js  upload.js
src/migrations/: migrateApiKeyHashes.js  migrateUserFolders.js
src/models/: AuditLog.js  Collection.js  File.js  ShareLink.js  SiteSettings.js  User.js
src/routes/: admin.js  api.js  auth.js  docs.js  files.js  gallery.js  import.js  install.js  setup.js  shares.js
src/utils/: audit.js  mailer.js  (+4 more)
(+69 files in other folders)
